[package]
name = "camerars"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
serde = { version = "1.0.197", features = ["derive"] }

[dependencies.bytes]
version = "1"

[dependencies.clap]
version = "4.5.4"
features = ["derive"]

[dependencies.ffmpeg-next]
version = "6"
features = ["default", "build", "codec", "format"]

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["default", "serde", "serde_json"]


[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "net", "fs"]

[dependencies.warp]
version = "0.3"

[dependencies.object_store]
version = "0.9.1"
features = ["aws"]

[dependencies.thiserror]
version = "1.0"

[dependencies.chrono]
version = "0.4"
features = ["default", "serde", "now"]

[dependencies.rusqlite]
version = "0.31"
features = ["bundled", "chrono"]
